# 3-python-package-parallax

./: .gitignore  Pipfile  README.md  example.py  main.py  pyproject.toml  test.py
.github/workflows/: build.yaml  buildci.yml  test.yml
fortune_package/: Fortune_story.py  fortune_stories.py
fortune_teller/: cs_fortune.py  date_time.py  emoji_fortune.py  fortune_stories.py  get_fortune.py  get_started.py  main.py  mood_fortune.py
pyfortune/: emoji_fortune.py
tests/: test_cs_fortune.py  test_emoji_fortune.py  test_fortune_story.py  test_get_fortune.py  test_mood_fortune.py  test_rand_date_time.py
