[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortune_teller"
version = "0.1.0"
description = "A fun Python package that generates random fortunes with a date."
authors = [{name = "Your Name", email = "your@email.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["fortune_teller"]


[project.optional-dependencies]
dev = ["pytest"]