[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fortune-teller2607555"
version = "0.1.1"
description = "A fun Python package that generates random fortunes with a date."
authors = [    
    { name = "Brian" },
    { name = "Naz" },
    { name = "Jibril" },
    { name = "Polina" }]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools]
packages = ["fortune_teller"]


[project.optional-dependencies]
dev = ["pytest"]